--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.3.3",
     "http-server": "^14.1.1",
+    "quill": "^2.0.3",
     "react": "^19.2.0",
     "react-bootstrap": "2.8.0",
+    "react-datepicker": "4.3.0",
     "react-dom": "^19.2.0",
+    "react-quilljs": "^2.0.5",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
     "react-scripts": "5.0.1",
