--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "2.8.0",
     "react-datepicker": "4.3.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "7.45.4",
     "react-quilljs": "^2.0.5",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
